Fix button spacing

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 .timer-contents {
   background-color: #ffffff31;
   border-radius: 2rem;
-  width: 800px;
+  width: 600px;
   max-width: 95%;
   margin: 1rem;
 }
@@ -56,6 +56,9 @@ body {
   font-family: "Pattaya", sans-serif;
 }
 
+.buttons{
+}
+
 .button {
   text-decoration: none;
   border: 2px solid #fff;
@@ -65,6 +68,7 @@ body {
   background-color: #155263;
   height: 100px;
   width: 100px;
+  margin: 0 5%;
 }
 
 .button img {
